--- a/Microsoft.Windows.Toolkit.SampleApp/MainPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:Microsoft.Windows.Toolkit.SampleApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:layoutControls="using:Microsoft.Windows.Toolkit.UI.LayoutControls"
+    xmlns:layoutControls="using:Microsoft.Windows.Toolkit.UI.Controls"
     mc:Ignorable="d">
     <Page.Resources>
         <DataTemplate x:Key="ButtonTemplate" x:DataType="local:SampleCategory">
