--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/HamburgerMenu/HamburgerMenu.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Windows.Toolkit.UI.LayoutControls">
+    xmlns:local="using:Microsoft.Windows.Toolkit.UI.Controls">
 
     <Style TargetType="local:HamburgerMenu">
         <Setter Property="Template">
