--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/Themes/Generic.xaml
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/Themes/Generic.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:layoutControls="using:Microsoft.Windows.Toolkit.UI.LayoutControls">
+    xmlns:layoutControls="using:Microsoft.Windows.Toolkit.UI.Controls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.LayoutControls/HamburgerMenu/HamburgerMenu.xaml"/>
     </ResourceDictionary.MergedDictionaries>
