--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/Themes/Generic.xaml
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/Themes/Generic.xaml
@@ -4,6 +4,7 @@
     xmlns:layoutControls="using:Microsoft.Windows.Toolkit.UI.Controls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.LayoutControls/HamburgerMenu/HamburgerMenu.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/ResponsiveGridView/ResponsiveGridView.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
