--- a/Microsoft.Windows.Toolkit.SampleApp/MainPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/MainPage.xaml
@@ -5,8 +5,9 @@
     xmlns:local="using:Microsoft.Windows.Toolkit.SampleApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:Microsoft.Windows.Toolkit.UI.Controls"
     mc:Ignorable="d">
-    <!--<Page.Resources>
+    <Page.Resources>
         <DataTemplate x:Key="ButtonTemplate" x:DataType="local:SampleCategory">
             <Grid Width="240" Height="48">
                 <Grid.ColumnDefinitions>
@@ -17,12 +18,25 @@
                 <TextBlock Grid.Column="1" Text="{x:Bind Name}" Foreground="White" FontSize="16" VerticalAlignment="Center"></TextBlock>
             </Grid>
         </DataTemplate>
-    </Page.Resources>-->
-    <Grid></Grid>
-    <!--<controls:HamburgerMenu PaneBackground="#242424" x:Name="HamburgerMenu"
+
+        <DataTemplate x:Key="OptionTemplate" x:DataType="local:Option">
+            <Grid Width="240" Height="48">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="48"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <FontIcon Grid.Column="0" Margin="12,12,11,12" FontFamily="Segoe MDL2 Assets" Glyph="{x:Bind Glyph}" Foreground="White" />
+                <TextBlock Grid.Column="1" Text="{x:Bind Name}" Foreground="White" FontSize="16" VerticalAlignment="Center"></TextBlock>
+            </Grid>
+        </DataTemplate>
+    </Page.Resources>
+
+    <controls:HamburgerMenu PaneBackground="#242424" x:Name="HamburgerMenu"
                                   ItemClick="HamburgerMenu_OnItemClick"
                                   Foreground="White"
-                                  ItemTemplate="{StaticResource ButtonTemplate}">
+                                  ItemTemplate="{StaticResource ButtonTemplate}"
+                                  OptionsItemTemplate="{StaticResource OptionTemplate}"
+                                  OptionsItemClick="HamburgerMenu_OnOptionsItemClick">
         <Frame x:Name="NavigationFrame"></Frame>
-    </controls:HamburgerMenu>-->
+    </controls:HamburgerMenu>
 </Page>
