--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/ResponsiveGridView/ResponsiveGridView.xaml
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/ResponsiveGridView/ResponsiveGridView.xaml
@@ -8,7 +8,7 @@
 				<ControlTemplate TargetType="controls:ResponsiveGridView">
                     <Grid>
 						<ContentPresenter x:Name="templateProxy" Width="{TemplateBinding ItemWidth}" Height="{TemplateBinding ItemHeight}" ContentTemplate="{TemplateBinding ItemTemplate}" Visibility="Collapsed" />
-						<GridView x:Name="listView" IsItemClickEnabled="True" SelectionMode="None" IsSwipeEnabled="False" IsTabStop="False"
+						<GridView x:Name="ListView" IsItemClickEnabled="True" SelectionMode="None" IsSwipeEnabled="False" IsTabStop="False"
                           ScrollViewer.VerticalScrollMode="{TemplateBinding VerticalScroll}" ScrollViewer.VerticalScrollBarVisibility="Hidden"
                           ItemsSource="{TemplateBinding ItemsSource}">
                             <GridView.ItemTemplate>
