Updated template part to upper-case

--- a/Microsoft.Windows.Toolkit.UI.LayoutControls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Windows.Toolkit.UI.LayoutControls/HamburgerMenu/HamburgerMenu.xaml
@@ -7,23 +7,23 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:HamburgerMenu">
-                    <SplitView x:Name="mainSplitView" OpenPaneLength="{TemplateBinding OpenPaneLength}" 
+                    <SplitView x:Name="MainSplitView" OpenPaneLength="{TemplateBinding OpenPaneLength}" 
                                PanePlacement="{TemplateBinding PanePlacement}" DisplayMode="{TemplateBinding DisplayMode}" 
                                CompactPaneLength="{TemplateBinding CompactPaneLength}" PaneBackground="{TemplateBinding PaneBackground}" 
                                IsPaneOpen="{TemplateBinding IsPaneOpen}">
                         <SplitView.Pane>
-                            <Grid x:Name="paneGrid">
+                            <Grid x:Name="PaneGrid">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"></RowDefinition>
                                     <RowDefinition></RowDefinition>
                                     <RowDefinition Height="Auto"></RowDefinition>
                                 </Grid.RowDefinitions>
 
-                                <Button Grid.Row="0" Name="hamburgerButton" Padding="0" Width="{TemplateBinding HamburgerWidth}" Height="{TemplateBinding HamburgerHeight}" BorderThickness="0" VerticalAlignment="Top" Background="Transparent">
+                                <Button Grid.Row="0" Name="HamburgerButton" Padding="0" Width="{TemplateBinding HamburgerWidth}" Height="{TemplateBinding HamburgerHeight}" BorderThickness="0" VerticalAlignment="Top" Background="Transparent">
                                     <FontIcon Margin="{TemplateBinding HamburgerMargin}" FontFamily="Segoe MDL2 Assets" Glyph="&#xE700;" Foreground="{TemplateBinding Foreground}"/>
                                 </Button>
 
-                                <ListView Grid.Row="1" Name="buttonsListView" ItemsSource="{TemplateBinding ItemsSource}" ItemTemplate="{TemplateBinding ItemTemplate}" IsItemClickEnabled="True"
+                                <ListView Grid.Row="1" Name="ButtonsListView" ItemsSource="{TemplateBinding ItemsSource}" ItemTemplate="{TemplateBinding ItemTemplate}" IsItemClickEnabled="True"
                                               Width="{TemplateBinding OpenPaneLength}">
                                     <ListView.ItemContainerStyle>
                                         <Style TargetType="ListViewItem">
@@ -39,7 +39,7 @@
                                     </Grid.RowDefinitions>
                                     <Rectangle Height="1" Fill="{TemplateBinding Foreground}" Grid.Row="0"></Rectangle>
                                     
-                                    <ListView Grid.Row="1" Name="optionsListView" ItemsSource="{TemplateBinding OptionsItemsSource}" ItemTemplate="{TemplateBinding OptionsItemTemplate}" IsItemClickEnabled="True"
+                                    <ListView Grid.Row="1" Name="OptionsListView" ItemsSource="{TemplateBinding OptionsItemsSource}" ItemTemplate="{TemplateBinding OptionsItemTemplate}" IsItemClickEnabled="True"
                                               Width="{TemplateBinding OpenPaneLength}" VerticalAlignment="Bottom">
                                         <ListView.ItemContainerStyle>
                                             <Style TargetType="ListViewItem">
