--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridViewPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridViewPage.xaml
@@ -3,19 +3,36 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Microsoft.Windows.Toolkit.SampleApp.Pages"
+    xmlns:controls="using:Microsoft.Windows.Toolkit.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Margin="10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="48"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="1" Text="{Binding Text.Value, Mode=OneWay}" Foreground="Black" 
-                       FontSize="{Binding FontSize.Value, Mode=OneWay}" 
-                       VerticalAlignment="{Binding VerticalAlignment.Value, Mode=OneWay}"></TextBlock>
-        </Grid>
-    </Grid>
+	<Page.Resources>
+		<DataTemplate x:Key="PhotosTemplate">
+			<Grid
+        Background="White"
+        BorderBrush="Black"
+        BorderThickness="1">
+				<Image
+            Source="{Binding Thumbnail}"
+            Stretch="UniformToFill"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"/>
+			</Grid>
+		</DataTemplate>
+	</Page.Resources>
+
+
+	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+		<controls:ResponsiveGridView
+          Name="control"
+          ItemsSource="{Binding}"
+          ItemHeight="200"
+          DesiredWidth="300"
+          ItemTemplate="{StaticResource PhotosTemplate}"/>
+
+
+	</Grid>
 </Page>
