--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridViewPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridViewPage.xaml
@@ -2,7 +2,6 @@
     x:Class="Microsoft.Windows.Toolkit.SampleApp.SamplePages.ResponsiveGridViewPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Windows.Toolkit.SampleApp.Pages"
     xmlns:controls="using:Microsoft.Windows.Toolkit.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -25,14 +24,10 @@
 
 
 	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
 		<controls:ResponsiveGridView
           Name="control"
-          ItemsSource="{Binding}"
-          ItemHeight="200"
-          DesiredWidth="300"
+          ItemHeight="{Binding ItemHeight.Value}"
+          DesiredWidth="{Binding DesiredWidth.Value}"
           ItemTemplate="{StaticResource PhotosTemplate}"/>
-
-
 	</Grid>
 </Page>
