--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/VariableSizedGridViewPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/VariableSizedGridViewPage.xaml
@@ -1,5 +1,5 @@
-<Page
-    x:Class="Microsoft.Windows.Toolkit.SampleApp.SamplePages.VariableSizedGridPage"
+﻿<Page
+    x:Class="Microsoft.Windows.Toolkit.SampleApp.SamplePages.VariableSizedGridViewPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Microsoft.Windows.Toolkit.UI.Controls"
@@ -22,12 +22,12 @@
     </Page.Resources>
 
 	<Grid Background="LightGray">
-        <controls:VariableSizedGrid
+        <controls:VariableSizedGridView
             Name="control"
-            Margin="0"
+            Margin="5"
             ItemTemplate="{StaticResource PhotoTemplate}"
-            Orientation="@[Orientation:Enum:Orientation.Horizontal]"
-            MaximumRowsOrColumns="@[MaximumRowsOrColumns:Slider:4:1-10]"            
-		/>
+            Orientation="{Binding Orientation.Value}"
+            MaximumRowsOrColumns="{Binding MaximumRowsOrColumns.Value}"            
+        />
     </Grid>
 </Page>
