--- a/Microsoft.Windows.Toolkit.SampleApp/Controls/PropertyControl.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/Controls/PropertyControl.xaml
@@ -10,7 +10,9 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <StackPanel x:Name="RootPanel" Padding="15,20,15,20" Background="{StaticResource AppBarBackgroundThemeBrush}">
+    <ScrollViewer>
+        <StackPanel x:Name="RootPanel" Padding="15,20,15,20" Background="{StaticResource AppBarBackgroundThemeBrush}">
 
-    </StackPanel>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
