Round of fixes following code review

--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
@@ -11,6 +11,7 @@
         <DataTemplate x:Key="PhotoTemplate">
             <Grid BorderBrush="Black" BorderThickness="1" Background="Black">
                 <controls:ImageEx
+                    IsCacheEnabled="True"
                     Source="{Binding Thumbnail}"
                     Stretch="UniformToFill"
                     HorizontalAlignment="Center"
