--- a/Microsoft.Windows.Toolkit.UI.Controls/Themes/Generic.xaml
+++ b/Microsoft.Windows.Toolkit.UI.Controls/Themes/Generic.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/RangeSelector/RangeSelector.xaml"/>
         <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/SearchBox/SearchBox.xaml"/>
         <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/Pivorama/Pivorama.xaml" />
+        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
