--- a/Microsoft.Windows.Toolkit.UI.Controls/Carousel/Carousel.xaml
+++ b/Microsoft.Windows.Toolkit.UI.Controls/Carousel/Carousel.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:AppStudio.Uwp.Controls">
+    xmlns:controls="using:Microsoft.Windows.Toolkit.UI.Controls">
 
     <Style TargetType="controls:Carousel">
         <Setter Property="Template">
@@ -70,21 +70,21 @@
                                 </Border>
                             </ControlTemplate>
                         </Grid.Resources>
-                        <Canvas Name="container" />
-                        <Button Name="prevArrow" Width="20" IsTabStop="False" Template="{StaticResource HorizontalPrevTemplate}" UseSystemFocusVisuals="False" HorizontalAlignment="Left" VerticalAlignment="Top" Opacity="0.0" />
-                        <Button Name="nextArrow" Width="20" IsTabStop="False" Template="{StaticResource HorizontalNextTemplate}" UseSystemFocusVisuals="False" HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.0" />
+                        <Canvas Name="Container" />
+                        <Button Name="PrevArrow" Width="20" IsTabStop="False" Template="{StaticResource HorizontalPrevTemplate}" UseSystemFocusVisuals="False" HorizontalAlignment="Left" VerticalAlignment="Top" Opacity="0.0" />
+                        <Button Name="NextArrow" Width="20" IsTabStop="False" Template="{StaticResource HorizontalNextTemplate}" UseSystemFocusVisuals="False" HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.0" />
                         <Grid IsHitTestVisible="False" Opacity="{TemplateBinding GradientOpacity}">
                             <Grid.Background>
-                                <LinearGradientBrush x:Name="gradient" StartPoint="0,0" EndPoint="1,0">
+                                <LinearGradientBrush x:Name="Gradient" StartPoint="0,0" EndPoint="1,0">
                                     <GradientStop Color="Black" Offset="0"/>
-                                    <GradientStop Color="Transparent" Offset="0"/>
-                                    <GradientStop Color="Transparent" Offset="1"/>
+                                    <GradientStop Color="Transparent" Offset="0.2"/>
+                                    <GradientStop Color="Transparent" Offset="0.8"/>
                                     <GradientStop Color="Black" Offset="1"/>
                                 </LinearGradientBrush>
                             </Grid.Background>
                         </Grid>
                         <Grid.Clip>
-                            <RectangleGeometry x:Name="clip" />
+                            <RectangleGeometry x:Name="Clip" />
                         </Grid.Clip>
                     </Grid>
                 </ControlTemplate>
